libtestability-driver-ruby (1.4.0-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 27 Oct 2011 12:30:00 +0200

libtestability-driver-ruby (1.3.2-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 14 Oct 2011 12:30:00 +0200

libtestability-driver-ruby (1.3.1-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 2 Sep 2011 11:39:00 +0200

libtestability-driver-ruby (1.3.0-1) unstable; urgency=low

  * new release version

  * Fixes: NB#273996 - Attributes for parent item is not working

 -- Testability Driver Team <testabilitydriver@nokia.com>  Tue, 16 Aug 2011 13:28:00 +0200

libtestability-driver-ruby (1.2.0-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Fri, 20 May 2011 09:10:00 +0200

libtestability-driver-ruby (1.1.1-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 31 Mar 2011 14:00:00 +0200

libtestability-driver-ruby (1.1.0-1) unstable; urgency=low

  * new release version
  
  * Fixes: NB#202120 - Verify_equal omits space if it is as the first letter of word

 -- Testability Driver Team <testabilitydriver@nokia.com>  Mon, 07 Mar 2011 10:30:00 +0200

libtestability-driver-ruby (1.0.4-2) unstable; urgency=low

  * Fixes: NB#226928 - Regression in the object finding with empty attributes

 -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 10 Feb 2011 16:00:00 +0200

libtestability-driver-ruby (1.0.4-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Wed, 26 Jan 2011 16:00:00 +0200

libtestability-driver-ruby (1.0.3-1) unstable; urgency=low

  * new release version

 -- Testability Driver Team <testabilitydriver@nokia.com>  Tue, 25 Jan 2011 09:00:00 +0200
