@@ -2,6 +2,8 @@ libtestability-driver-ruby (1.4.0-1) unstable; urgency=low
 
   * new release version
 
+  * Fixes: NB#289290 - Verify less,greater and equal error messages
+
  -- Testability Driver Team <testabilitydriver@nokia.com>  Thu, 27 Oct 2011 12:30:00 +0200
 
 libtestability-driver-ruby (1.3.2-1) unstable; urgency=low
